# couchbase-lite-java

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LiteCoreJNI.exp  README.md  build.gradle  settings.gradle  test.pr
etc/jenkins/: README.md  (+11 more)
jni/: native_c4blobstore.cc  native_c4database.cc  native_fleece.cc  native_glue.cc  native_glue.hh
lib/: .gitignore  CMakeLists.txt  build.gradle
lib/src/main/java/com/couchbase/lite/: ConsoleLogger.java  CouchbaseLite.java  NativeLibrary.java  NetworkReachabilityManager.java
lib/src/main/java/com/couchbase/lite/internal/: CouchbaseLiteInternal.java  JavaExecutionService.java  NativeLibrary.java
lib/src/main/resources/: errors.properties
lib/src/shared/ce/java/com/couchbase/lite/: Database.java  DatabaseConfiguration.java  Function.java  Replicator.java  ReplicatorConfiguration.java
lib/src/shared/main/cpp/: native_c4.cc  native_c4base.cc  native_c4database.cc  native_c4document.cc  native_c4observer.cc  native_c4prediction.cc  native_c4query.cc  native_c4queryenumerator.cc  native_c4replicator.cc  native_fleece.cc  native_flencoder.cc  native_glue.cc  native_glue.hh
lib/src/shared/main/java/com/couchbase/lite/: AbstractConsoleLogger.java  AbstractDatabase.java  AbstractDatabaseConfiguration.java  AbstractFunction.java  AbstractIndex.java  AbstractIndexBuilder.java  AbstractQuery.java  AbstractReplicator.java  AbstractReplicatorConfiguration.java  Array.java  ArrayExpression.java  ArrayExpressionIn.java  ArrayExpressionSatisfies.java  ArrayFunction.java  Authenticator.java  Blob.java  ChangeListenerToken.java  Conflict.java  ConflictResolver.java  CouchbaseLiteException.java  DataSource.java  Dictionary.java  DocContext.java  Document.java  DocumentChangeListener.java  DocumentChangeNotifier.java  DocumentExpirationStrategy.java  DocumentFlag.java  Expression.java  FileLogger.java  Fleece.java  FullTextFunction.java  GroupBy.java  IndexType.java  Join.java  LiteCoreException.java  LiveQuery.java  Log.java  LogFileConfiguration.java  LogLevel.java  (+23 more)
lib/src/shared/main/java/com/couchbase/lite/internal/: AbstractExecutionService.java  CBLInternalException.java  CBLStatus.java  ExecutionService.java
lib/src/shared/main/java/com/couchbase/lite/internal/core/: C4Base.java  C4BlobKey.java  C4BlobReadStream.java  C4BlobStore.java  C4BlobWriteStream.java  C4Database.java  C4DatabaseObserver.java  C4DocEnumerator.java  C4Document.java  C4DocumentEnded.java  C4DocumentObserver.java  C4Error.java  C4Key.java  C4Log.java  C4NativePeer.java  C4Query.java  C4QueryEnumerator.java  C4QueryOptions.java  C4ReplicationFilter.java  C4Replicator.java  C4ReplicatorStatus.java  C4Socket.java  C4WebSocketCloseCode.java  RefCounted.java  SharedKeys.java
lib/src/shared/main/java/com/couchbase/lite/internal/fleece/: Encodable.java  FLArray.java  FLArrayIterator.java  FLDict.java  FLDictIterator.java  FLEncoder.java  FLSliceResult.java  FLValue.java  MDict.java  MValue.java
lib/src/shared/main/java/com/couchbase/lite/internal/replicator/: AbstractCBLWebSocket.java
lib/src/shared/main/java/com/couchbase/lite/internal/support/: Log.java  Run.java
lib/src/shared/main/java/com/couchbase/lite/internal/utils/: DateUtils.java  ExceptionUtils.java  Preconditions.java
lib/src/shared/main/java/com/couchbase/lite/utils/: FileUtils.java  Fn.java
lib/src/shared/main/java/okhttp3/internal/tls/: CustomHostnameVerifier.java
lib/src/shared/test/java/com/couchbase/lite/: ArrayTest.java  BaseDbTest.java  BaseQueryTest.java  BaseReplicatorTest.java  BaseTest.java  BlobTest.java  ConcurrencyTest.java  DatabaseTest.java  DictionaryTest.java  DocumentTest.java  ErrorCaseTest.java  LiveQueryTest.java  LoadTest.java  LogTest.java  MigrationTest.java  NotificationTest.java  PlatformTest.java  PreInitTest.java  QueryChangeTest.java  QueryTest.java  ReplicatorChangeListenerTokenTest.java  ReplicatorMiscTest.java  ReplicatorOfflineTest.java  ResultTest.java  SaveConflictResolutionTest.kt  SimpleDatabaseTest.java  TestReplicatorChangeListener.java  URLEndpointTest.java
lib/src/shared/test/java/com/couchbase/lite/internal/: ExecutionServiceTest.kt  ExecutionServicesTest.kt
lib/src/shared/test/java/com/couchbase/lite/internal/core/: C4AllDocsPerformanceTest.java  C4BaseTest.java  C4BlobStoreTest.java  C4CollatedQueryTest.java  C4DatabaseTest.java  C4DocumentTest.java  C4FleeceTest.java  C4NestedQueryTest.java  C4ObserverTest.java  C4PathsQueryTest.java  C4QueryBaseTest.java  C4QueryTest.java
lib/src/shared/test/java/com/couchbase/lite/internal/fleece/: FleeceArray.java  FleeceDocument.java
lib/src/shared/test/java/com/couchbase/lite/utils/: TestUtils.java
lib/src/systemTest/com/couchbase/lite/: ReplicatorWithSyncGatewayTest.java
lib/src/test/java/com/couchbase/lite/: PlatformBaseTest.java
lib/templates/: CBLVersion.java
release/: assembly.xml  build_artifacts.sh  build_automation.rb  pom.xml  settings.xml  unit_test.sh  upload_artifacts.sh  zip_jars.sh
scripts/: build_litecore.bat  build_litecore.sh  clean_litecore.bat  clean_litecore.sh  extract_libs.sh  fetch_litecore.ps1  fetch_litecore.sh  litecore_sha.ps1  litecore_sha.sh  prebuild_linux.sh  prebuild_macos.sh  prebuild_windows.bat
templates/: CBLVersion.java
test/: build.gradle
(+312 files in other folders)
